--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
         gtag('js', new Date());
 
         gtag('config', 'G-RRZDFKV8FM');
+        setTimeout("redirect()", 5);
+        function redirect(){
+            location.href="https://www.artifacter.site/";
+        }
     </script>
     <meta name="google-site-verification" content="5qYedTH0k8vjY0DVM0B3qPPNhdlMTvTaAGjp4n2c7C8" />
     <meta charset="utf-8">
@@ -24,83 +28,9 @@
     <link rel="stylesheet" href="assets/fonts/ionicons.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome5-overrides.min.css">
     <link rel="stylesheet" href="assets/css/styles.min.css">
+    
 </head>
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg sticky-top navigation-clean">
-        <div class="container"><a class="navbar-brand" href="#">GenshinArtifacter</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#feature">機能</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#uses">使い方</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#rule">利用規約</a></li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item"></li>
-                    <li class="nav-item"><a class="nav-link" href="https://discord.com/api/oauth2/authorize?client_id=993383941983698984&amp;permissions=277562641472&amp;scope=bot%20applications.commands" style="box-shadow: 0px 0px;background: #5470ff;border-radius: 11px;color: rgb(255,255,255);transform: perspective(0px);filter: brightness(109%) contrast(119%);"><i class="fab fa-discord" style="border-style: none;padding: 0px;margin: 0px;margin-right: 3px;font-size: 20px;width: 19.5px;transform: scale(0.97);background: rgba(0,0,0,0);"></i>Botを招待する</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-    <section id="feature" class="features-boxed" style="margin-right: 10px;margin-left: 10px;margin-top: 25px;">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Botの機能</h2>
-            </div>
-            <div class="row justify-content-center features">
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fas fa-gamepad icon"></i>
-                        <h3 class="name">UIDからラインナップを確認</h3>
-                        <p class="description">自分の原神のUIDを入力することで<br>キャラクターのビルドを確認できます。</p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-bar-chart-o icon"></i>
-                        <h3 class="name">キャラクターステータス</h3>
-                        <p class="description">キャラクターのステータスを表示し、<br>他のメンバーに自分のキャラ共有できます。</p>
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-5 col-lg-4 item">
-                    <div class="box"><i class="fa fa-calculator icon"></i>
-                        <h3 class="name">スコア計算/評価</h3>
-                        <p class="description">キャラクターのスコアを<br>攻撃/防御/HPを基準に計算できます。</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="uses" class="features-boxed" name="uses" style="padding: 0px;margin: 0px;margin-top: 20px;margin-right: 10px;margin-left: 10px;padding-bottom: 20px;">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Botの使用方法</h2>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-body">
-                        <div class="alert alert-light" role="alert"><span><strong>※この使用方法は変更されている恐れがあります。</strong><br></span></div>
-                        <h6 class="text-muted card-subtitle mb-2" style="margin-top: 11px;">①<code class="text-info">/build</code>を任意のチャンネルで実行します。</h6><img class="img-fluid" src="assets/img/build.png">
-                        <h6 class="text-muted card-subtitle mb-2" style="margin-top: 11px;">②自分の原神ゲーム内UIDを入力します。</h6><img class="img-fluid" src="assets/img/pannel.png">
-                        <h6 class="text-muted card-subtitle mb-2" style="margin-top: 11px;">③操作パネルより確認したいキャラクター/ステータスを選択します。</h6><img class="img-fluid" src="assets/img/p2.png" loading="auto"></div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section id="rule" class="features-boxed" style="padding: 0px;margin: 0px;margin-top: 20px;margin-right: 10px;margin-left: 10px;padding-bottom: 20px;">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">利用規約</h2>
-            </div>
-            <div class="alert alert-light" role="alert"><a class="alert-link" href="rule.html">こちらから確認できます。</a></div>
-        </div>
-    </section>
-    <footer class="footer-dark" style="margin-bottom: 0px;margin-top: 30px;">
-        <div class="container">
-            <div class="row">
-                <div class="col item social"><a href="https://twitter.com/hyugo_genshin"><i class="icon ion-social-twitter"></i></a></div>
-            </div>
-            <p class="copyright">Hyugo © 2022</p>
-        </div>
-    </footer>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/script.min.js"></script>
+   公式サイトは<a href="https://artifacter.site">新しいサイト</a>に移行しました
 </body>
 </html>
