--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-RRZDFKV8FM');
+        setTimeout(function(){window.location.href="https://artifacter.site/"},0);
     </script>
     <meta name="google-site-verification" content="5qYedTH0k8vjY0DVM0B3qPPNhdlMTvTaAGjp4n2c7C8" />
     <meta charset="utf-8">
